--- a/qab/admin/src/assets/scss/Layout.scss
+++ b/qab/admin/src/assets/scss/Layout.scss
@@ -231,6 +231,7 @@ body { padding-bottom: 40px; min-height: 600px; }
     background-color: transparent!important;
     box-shadow: none !important;
     overflow-y: auto;
+    height:550px;
 }
 
 .report__top {
